fix overflow

--- a/themes/RCF-Pure/static/css/rcf-pure.css
+++ b/themes/RCF-Pure/static/css/rcf-pure.css
@@ -7,6 +7,7 @@ html{
     font-family: 'Courier New', Courier, monospace;
     padding: 1rem;
     font-size: 14px;
+    max-width: 100%;
 }
 
 body{
@@ -59,4 +60,8 @@ div.highlight{
 div.highlight pre{
     background-color: white!important;
     margin: 0;
+}
+
+pre{
+    overflow-x: auto;
 }
